Updated class projects

--- a/classproj.html
+++ b/classproj.html
@@ -127,6 +127,20 @@
 								<a href="http://inst.eecs.berkeley.edu/~cs61c/sp15/projs/03/index.html" class="buttonprojsmaller">Spec</a>
 								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
 							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/61cproj4.jpg" alt="" /></a></div>
+								<div class=""> <h5>Deep Learning Algorithm & Spark</h5></div>
+								<div class="6u"> <h6>I had to apply performance optimization techniques with the MapReduce programming model using the Apache Spark framework to the real-world problem of classifying images using a Convolutional Neural Network (CNN) in CS61C with Professor Asanovic and Professor Stojanovic. I optimized the training (or learning) of the model in neural networks using Spark in Python.</h6>
+								<a href="http://www-inst.eecs.berkeley.edu/~cs61c/sp15/projs/04/index.html" class="buttonprojsmaller">Spec</a>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
+							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/61cproj42.jpg" alt="" /></a></div>
+								<div class=""> <h5>Amazon EC2</h5></div>
+								<div class="6u"> <h6>In CS61C with Professor Asanovic and Professor Stojanovic, I had to run my MapReduce and Spark code useing the power of EC2 to run image classifiers. Running the code with 5 or 10 instances, I used 5 or 10 c3.x8 large machines at a time. From the runtime results and the training performance, I had to calculate the overall speedup between instances and the total amount of money running our code costed.</h6>
+								<a href="http://www-inst.eecs.berkeley.edu/~cs61c/sp15/projs/04/index2.html" class="buttonprojsmaller">Spec</a>
+								<a href="mailto:michellekoo@berkeley.edu" class="buttonproj">Application</a></div>
+							</div>
 							<header>
 								<h4> <span> <a href="http://www-inst.eecs.berkeley.edu/~cs61b/fa14/">CS61B: Data Structures and Advanced Programming </a></span></h4>
 							</header>
