Added “Scurry the Squirrel and the Race” to hs projects

--- a/hsproj.html
+++ b/hsproj.html
@@ -102,6 +102,12 @@
 								<a href="https://www.dropbox.com/s/t2k8uzyd631nk3b/NeighborHoot%20Business%20Plan.pdf?dl=0" class="buttonproj">Business Plan</a></div>
 							</div>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/squirrel.jpg" alt="" /></a></div>
+								<div class=""> <h5>Scurry the Squirrel</h5></div>
+								<div class="6u"> <h6>I designed and wrote this online children's book through Adobe Dreamweaver and Photoshop in the Web Design class at Dougherty Valley High School.  I created all the images and wrote the storyline.  This publication is entitled, "Scurry the Squirrel and the Race". Enjoy! </h6>
+								<a href="squirrel/index.html" class="buttonproj">Book</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/travel.jpg" alt="" /></a></div>
 								<div class=""> <h5>Travel the Universe</h5></div>
 								<div class="6u"> <h6>Travel the Universe was created in Visual Basic as my final project for VS.net.  It includes an interactive map so users can learn about different countries before they visit them.  There is a time calculator to calculate the estimated amount of flight time and a currency conversion calculator.</h6>
