--- a/classproj.html
+++ b/classproj.html
@@ -215,6 +215,23 @@
 					<ul class="copyright">
 						<li>&copy; Michelle Koo. All rights reserved.</li><li>This is a modified design. Original design by: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
+					<!-- Start of StatCounter Code for Default Guide -->
+					<script type="text/javascript">
+					var sc_project=10449058; 
+					var sc_invisible=1; 
+					var sc_security="b8e5bc9a"; 
+					var scJsHost = (("https:" == document.location.protocol) ?
+					"https://secure." : "http://www.");
+					document.write("<sc"+"ript type='text/javascript' src='" +
+					scJsHost+
+					"statcounter.com/counter/counter.js'></"+"script>");
+					</script>
+					<noscript><div class="statcounter"><a title="shopify site
+					analytics" href="http://statcounter.com/shopify/"
+					target="_blank"><img class="statcounter"
+					src="http://c.statcounter.com/10449058/0/b8e5bc9a/1/"
+					alt="shopify site analytics"></a></div></noscript>
+					<!-- End of StatCounter Code for Default Guide -->
 				
 			</div>
 
