Added folds to personal projects

--- a/personalproj.html
+++ b/personalproj.html
@@ -89,6 +89,13 @@
 								<h2>Personal Projects</h2>
 							</header>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/folds.jpg" alt="" /></a></div>
+								<div class=""> <h5>Folds</h5></div>
+								<div class="6u"> <h6>This 3D animation short was created in the UCBUGG decal at UC Berkeley using Maya with five other teammates. I worked on a lot of the actual animation involving both the protagonist and the origami, modeling origami and furniture in the room, and basic shading. Enjoy!</h6>
+								<a href="https://www.youtube.com/watch?v=J92yjpiSMFk" class="buttonproj">Film</a>
+								<a href="https://www.dropbox.com/s/u73pc4fdpb69y8s/Folds.mp4?dl=0" class="buttonproj">My Rendition</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/hangmanapp.jpg" alt="" /></a></div>
 								<div class=""> <h5>Hangman</h5></div>
 								<div class="6u"> <h6>This Hangman web application was created at the UC Berkeley Hackjam with two teammates.  We used JavaScript, HTML, and CSS.  Words are chosen at random by the computer.</h6>
