Updated resume, projects, and main info.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<blockquote> "Tell me and I forget. Teach me and I remember. Involve me and I learn." ~Benjamin Franklin </blockquote>
 							<a href="#" class="image left"><img src="images/grad2.jpg" alt="" /></a>
 							
-							<p>Hello world!  I am a second year computer science major at the University of California, Berkeley.  I have lived in the bay area my entire life and I am from San Ramon, CA.  On campus I am an avid member of UC Berkeley's Society of Women Engineers Corporate Committee.  My hobbies include baking, reading, and playing the piano.  I welcome all internship and research opportunities. I hope you enjoy my site! </p>
+							<p>Hello world!  I am a rising third year computer science major at the University of California, Berkeley.  I have lived in the bay area my entire life and I am from San Ramon, CA.  This past summer I have been interning at Lawrence Berkeley National Laboratory. On campus I am an avid member of UC Berkeley's Society of Women Engineers Corporate Committee and I am the Chief Technology Officer for the Undergraduate Journal of Psychology at Berkeley.  My hobbies include baking, reading, and playing the piano.  I welcome all internship and research opportunities. I hope you enjoy my site! </p>
 
 						</div>
 					</section>
@@ -162,6 +162,12 @@
 							</header>
 							<div class="row">
 								<div class="row"> 
+								<exphead>Lawrence Berkeley National Laboratory</exphead>
+								<div class="6u"><expdate> June 2015 - August 2015</expdate></div>
+								<h6> During the summer of 2015, I have been working as a research intern under the supervision of Wucherl Yoo and Alex Sim in the Computational Research Division as part of the <a href="http://science.energy.gov/wdts/suli/">U.S. Department of Energy’s Science Undergraduate Laboratory Internship</a> program.  The project I have been working on is motivated by the observations that I/O performance analyses can be conducted from monitored performance measurement data from scientific clusters.  I created an I/O performance analysis framework that helped uncover bottlenecks in the Palomar Transient Factory application by analyzing measurment data recorded on NERSC Edison using Python, Spark, iPython notebook, and Matplotlib. I also created a Darshan parser/tool in Python using Apache Spark that analyzed the HPC computing tools’ I/O logs and calculated performance measurements. From this work, I developed research deliverables, research papers, and scientific posters, that were submitted to SULI and ACM SC '15. </h6>
+							</div>
+							<div class="row">
+								<div class="row"> 
 								<exphead>Chief Technology Officer of UC Berkeley UJPB</exphead>
 								<div class="6u"><expdate> January 2014 - Present</expdate></div>
 								<h6> I am the Chief Technology Officer of the <a href="http://ujpb.org">Undergraduate Journal of Psychology at Berkeley</a>. The Undergraduate Journal of Psychology at Berkeley is an annual publication that allows students who have done research and scientific studies in the field of psychology to publish their findings. As the Chief Technology Officer, I maintain and update the Journal's website.  The website is hosted by Wordpress and can be found at <a href="http://ujpb.org">http://ujpb.org</a>. I am also currently helping to set up a blog to provide a space to allow for deeper discussions about scientific research in psychology. </h6>
@@ -174,7 +180,7 @@
 							<div class="row">
 								<exphead>National Society of Leadership and Success</exphead>
 								<div class="6u"><expdate> March 2014 - Present</expdate></div>
-								<h6> I am a part of the <a href="https://www.societyleadership.org/">National Society of Leadership and Success</a>honor society at UC Berkeley.  I am currently working to be inducted and attend events such as orientation, leadership training day, speaker broadcasts, and success networking teams.  The National Society of Leadership and Success helps me plan out my future and future goals, while giving me incredible opportunitites and advice on how to attain my goals.</h6>
+								<h6> I am a member of the <a href="https://www.societyleadership.org/">National Society of Leadership and Success</a>honor society at UC Berkeley.  I am currently working to be officially inducted and attend events such as orientation, leadership training day, speaker broadcasts, and success networking teams.  The National Society of Leadership and Success aids in planning out future goals, while giving me the opportunity to attend incredible opportunitites.</h6>
 							</div>
 							<div class="row"> 
 								<div class=""> <exphead>CS61A Lab Assistant / Academic Intern</exphead></div>
@@ -194,7 +200,7 @@
 							<div class="row"> 
 								<div class=""> <exphead>Technovation Challenge World Finalist</exphead></div>
 								<div class="6u"><expdate> August 2012 - May 2013</expdate></div>
-								<h6> I joined the <a href="http://www.technovationchallenge.org/home/">Technovation Challenge</a> my senior year of high school with three other teammates.  We created an Android App with MIT App Inventor called Neighborhoot. We created the entire prototype of the app, the business plan, and the pitch to sell the idea to judges.  Details about Neighborhoot can be viewed under <a href="hsproj.html">Projects/High School Projects</a>. We were one of the top ten world finalists chosen to compete at the world pitch with girls from all around the world and we were featured on ABC News.</h6>
+								<h6> I joined the <a href="http://www.technovationchallenge.org/home/">Technovation Challenge</a> my senior year of high school with three other teammates.  We created an Android App with MIT App Inventor called Neighborhoot. We created the entire prototype of the app, the business plan, and the pitch to sell the idea to judges.  Details about Neighborhoot can be viewed under <a href="hsproj.html">Projects/High School Projects</a>. We were one of the top ten world finalists chosen to compete at the world pitch with girls from all around the world and we were featured on ABC News.  At World Pitch held at Twitter headquarters in San Francisco, we were awarded with the most comprehensive business plan.</h6>
 							</div>
 							<div class="row"> 
 								<div class=""> <exphead>Friends of the Dublin Library Volunteer</exphead></div>
