--- a/personalproj.html
+++ b/personalproj.html
@@ -89,6 +89,19 @@
 								<h2>Personal Projects</h2>
 							</header>
 							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/lbnl.jpg" alt="" /></a></div>
+								<div class=""> <h5>LBNL Research</h5></div>
+								<div class="6u"> <h6>My project at Lawrence Berkeley National Laboratory, under the Computational Research Division, was entitled "I/O Performance Anlysis Framework on Measurement Data from Scientific Clusters". An I/O performance analysis framework was developed using Python, Apache Spark, Python's Matplotlib, and iPython to identify performance characteristics and I/O performance bottlenecks in scientific applications.</h6>
+								<a href="research-abstract.pdf" class="buttonproj">Abstract</a>
+							</div>
+							<div class="row">
+								<div class=""><a href="#" class="image left"><img src="images/ujpb.jpg" alt="" /></a></div>
+								<div class=""> <h5>UJPB Website</h5></div>
+								<div class="6u"> <h6>As the Chief Technology Officer of UJPB, I update and maintain the Undergraduate Journal of Pyschology at Berkeley's website located at <a href="https://ujpb.org">https://ujpb.org</a>, hosted by Wordpress. I am currently creating a new website using HTML and CSS that will be hosted on Github. This new website is a work in progress and can be found at <a href="https://ujpb.github.io">https://ujpb.github.io</a>.</h6>
+								<a href="https://ujpb.org" class="buttonproj">Website</a>
+								<a href="https://github.com/ujpb/ujpb.github.io" class="buttonprojsmaller">Code</a></div>
+							</div>
+							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/folds.jpg" alt="" /></a></div>
 								<div class=""> <h5>Folds</h5></div>
 								<div class="6u"> <h6>This 3D animation short was created in the UCBUGG decal at UC Berkeley using Maya with five other teammates. I worked on a lot of the actual animation involving both the protagonist and the origami, modeling origami and furniture in the room, and basic shading. Enjoy!</h6>
