--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+
+		<script src="lightbox/js/jquery-1.11.0.min.js"></script>
+        <script src="lightbox/js/lightbox.min.js"></script>
+        <link href="lightbox/css/lightbox.css" rel="stylesheet"/>
+
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -92,7 +97,8 @@
 							</header>
 							
 							<footer>
-								<a href="Resume.pdf" class="button scrolly">Resume</a>
+								<!-- <a href="lightbox/img/resume.jpg" data-lightbox="resume" data-title="<a href=&quot;AmandaChowResume.pdf&quot;>Download</a>">resume</a> -->
+								<a href="images/Resume.jpg" data-lightbox="resume" data-title="<a href=&quot;Resume.pdf&quot;>Download</a>"class="button scrolly">Resume</a>
 							</footer>
 
 						</div>
