fixed cs calc and personal proj

--- a/cscalc.html
+++ b/cscalc.html
@@ -8,7 +8,6 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/jquery.scrollzer.min.js"></script>
@@ -20,8 +19,6 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
 		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<script type="text/javascript">
 
 			function matchGrade(grd) {
@@ -184,7 +181,7 @@
 							<header>
 								<h2>UC Berkeley CS GPA Calculator</h2>
 							</header>
-							<p> This calculator will calculate your technical GPA of the classes needed to declare Computer Science. Leave classes not taken yet or credited with AP blank. </p>
+							<p> This calculator will calculate your technical GPA of the prerequisite classes of UC Berkeley Computer Science. Leave classes not taken yet or credited with AP blank. </p>
 							<table id="gradeTable" style="width:70%">
 							  <tr>
 							    <th>Class</th>
