--- a/personalproj.html
+++ b/personalproj.html
@@ -8,7 +8,6 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/jquery.scrollzer.min.js"></script>
@@ -20,8 +19,6 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
 		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -153,7 +150,7 @@
 							<div class="row">
 								<div class=""><a href="#" class="image left"><img src="images/cscalc.jpg" alt="" /></a></div>
 								<div class=""> <h5>CS GPA Calculator</h5></div>
-								<div class="6u"> <h6>I created a UC Berkeley Computer Science GPA calculator that calculates a student's pre-requesite GPA to determine if they can declare.  Students need a 3.0 technical GPA to declare CS. I used JavaScript, HTML, and CSS.</h6>
+								<div class="6u"> <h6>I created a UC Berkeley Computer Science GPA calculator that calculates a student's GPA of prerequisite classes. I used JavaScript, HTML, and CSS.</h6>
 								<a href="cscalc.html" class="buttonproj">Application</a>
 								<a href="https://github.com/michellekoo/cs-calc" class="buttonprojsmaller">Code</a></div>
 							</div>
