Updated info on index

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<blockquote> "Tell me and I forget. Teach me and I remember. Involve me and I learn." ~Benjamin Franklin </blockquote>
 							<a href="#" class="image left"><img src="images/grad2.jpg" alt="" /></a>
 							
-							<p>Hello world!  I am a rising third year computer science major at the University of California, Berkeley.  I have lived in the bay area my entire life and I am from San Ramon, CA.  This past summer I have been interning at Lawrence Berkeley National Laboratory. On campus I am an avid member of UC Berkeley's Society of Women Engineers Corporate Committee and I am the Chief Technology Officer for the Undergraduate Journal of Psychology at Berkeley.  My hobbies include baking, reading, and playing the piano.  I welcome all internship and research opportunities. I hope you enjoy my site! </p>
+							<p>Hello world!  I am a fourth year computer science major at the University of California, Berkeley.  I have lived in the bay area my entire life and I am from San Ramon, CA.  This past summer I was a software engineering intern at Workday and the previous summer I was an undergraduate research intern at Lawrence Berkeley National Laboratory. On campus I am an avid member of UC Berkeley's Society of Women Engineers Corporate Committee and I am the Chief Technology Officer for the Undergraduate Journal of Psychology at Berkeley.  My hobbies include baking, reading, and playing the piano.  I welcome all internship and research opportunities. I hope you enjoy my site! </p>
 
 						</div>
 					</section>
@@ -162,6 +162,12 @@
 							<header>
 								<h2>Experience and Activities</h2>
 							</header>
+							<div class="row">
+								<div class="row"> 
+								<exphead style="padding-right:290px">Workday</exphead>
+								<div class="6u" text-align:"right"><expdate> May 2016 - August 2016</expdate></div>
+								<h6> During the summer of 2016, I have been working as a software engineering intern at Workday in Pleasanton, CA. I was on the Performance Team in the Tools and Organizations divison, where my project involved enhancing the existing Performance Portal. This was done by creating an ANSI-SQL interpreter to allow users to run Apache Spark queries that were beyond the capabilites of the Performance Portal using, while using the optimization qualities the backend of the Performance Portal provides. In addition, progress bars were implemented to reflect job status updates with regards to the running Spark job. Technologies used included Scala, Apache Spark, Node.js, and Angular 2.</h6>
+							</div>
 							<div class="row">
 								<div class="row"> 
 								<exphead>Lawrence Berkeley National Laboratory</exphead>
