--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							</header>
 							
 							<footer>
-								<a href="images/MichelleKooResume.jpg" data-lightbox="resume" data-title="<a href=&quot;Resume.pdf&quot;>Download</a>"class="button scrolly">Resume</a>
+								<a href="images/MichelleKooResume.jpg" data-lightbox="resume" data-title="<a href=&quot;MichelleKooResume.pdf&quot;>Download</a>"class="button scrolly">Resume</a>
 							</footer>
 
 						</div>
