--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 							</header>
 
 							<p>Email me at michellekoo@berkeley.edu or call me at (925) 336-4519 to get in touch!</p>
-							
-							<form action="MAILTO:michellekoo@berkeley.edu" method="post" enctype="text/plain">
+		
+							<form action="https://formspree.io/michellekoo@berkeley.edu" method="post" enctype="text/plain">
 								<div class="row 50%">
 									<div class="6u"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="6u"><input type="text" name="email" placeholder="Email" /></div>
