--- a/index.html
+++ b/index.html
@@ -226,8 +226,26 @@
 							</header>
 
 							<p>Email me at michellekoo@berkeley.edu or call me at (925) 336-4519 to get in touch!</p>
-		
-							<form action="https://formspree.io/michellekoo@berkeley.edu" method="post" enctype="text/plain">
+
+							<form method="POST" action="http://formspree.io/michellekoo@berkeley.edu">
+								<div class="row 50%">
+									<div class="6u">
+							  			<input type="email" name="email" placeholder="Your email">
+							  		</div>
+							  	</div>
+							  	<div class="row 50%">
+							  		<div class="12u">
+							  		<textarea name="message" placeholder="Your message"></textarea>
+							  		</div>
+							  	</div>
+							  	<div class="row">
+									<div class="12u">
+										<input type="submit" value="Send Message" />
+									</div>
+								</div>
+							</form>
+
+							<!-- <form action="https://formspree.io/michellekoo@berkeley.edu" method="post" enctype="text/plain">
 								<div class="row 50%">
 									<div class="6u"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="6u"><input type="text" name="email" placeholder="Email" /></div>
@@ -242,7 +260,7 @@
 										<input type="submit" value="Send Message" />
 									</div>
 								</div>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
